fix: add body text color to improve readability in CSS

--- a/themes/tella/static/css/style.css
+++ b/themes/tella/static/css/style.css
@@ -119,6 +119,7 @@
 body {
   font-family: 'Montserrat', 'Noto Sans JP', sans-serif;
   font-weight: 300;
+  color: black
 }
 .content {
   font-family: 'Open Sans', 'Noto Sans JP', sans-serif;
